--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>reveal.js</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="data61-theme/d61.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -24,7 +24,14 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
+
+				<section data-background-image="data61-theme/img/DATA61_CSIRO_OnWhite_RGB_trans.png" data-background-position="1% 99%" data-background-size="10%" data-background-repeat="no-repeat">
+					<h2>Let's Make Functional Generative Art!</h2>
+					<p><a href="https://twitter.com/xavier_ho" rel="author"><strong>@Xavier_Ho</strong></a></p>
+				</section>
+
+
+
 				<section>Slide 2</section>
 			</div>
 		</div>
@@ -41,6 +48,7 @@
 					{ src: 'plugin/markdown/marked.js' },
 					{ src: 'plugin/markdown/markdown.js' },
 					{ src: 'plugin/notes/notes.js', async: true },
+					{ src: 'plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
 					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
 				]
 			});
