--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>reveal.js</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="data61-theme/d61.css">
+		<link rel="stylesheet" href="css/theme/d61.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -26,8 +26,8 @@
 			<div class="slides">
 
 				<section data-background-image="data61-theme/img/DATA61_CSIRO_OnWhite_RGB_trans.png" data-background-position="1% 99%" data-background-size="10%" data-background-repeat="no-repeat">
-					<h2>Let's Make Functional Generative Art!</h2>
-					<p><a href="https://twitter.com/xavier_ho" rel="author"><strong>@Xavier_Ho</strong></a></p>
+					<h1>Let's Make Functional Generative Art!</h1>
+					<h3><a href="https://twitter.com/xavier_ho" rel="author"><strong>@Xavier_Ho</strong></a></h3>
 				</section>
 
 
