--- a/index.html
+++ b/index.html
@@ -1,57 +1,148 @@
 <!doctype html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+    <title>reveal.js</title>
 
-		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/d61.css">
+    <link rel="stylesheet" href="css/reveal.css">
+    <link rel="stylesheet" href="css/theme/d61.css">
 
-		<!-- Theme used for syntax highlighting of code -->
-		<link rel="stylesheet" href="lib/css/zenburn.css">
+    <!-- Theme used for syntax highlighting of code -->
+    <link rel="stylesheet" href="lib/css/zenburn.css">
 
-		<!-- Printing and PDF exports -->
-		<script>
-			var link = document.createElement( 'link' );
-			link.rel = 'stylesheet';
-			link.type = 'text/css';
-			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
-			document.getElementsByTagName( 'head' )[0].appendChild( link );
-		</script>
-	</head>
-	<body>
-		<div class="reveal">
-			<div class="slides">
+    <!-- Printing and PDF exports -->
+    <script>
+      var link = document.createElement( 'link' );
+      link.rel = 'stylesheet';
+      link.type = 'text/css';
+      link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
+      document.getElementsByTagName( 'head' )[0].appendChild( link );
+    </script>
+  </head>
+  <body>
+    <div class="reveal">
+      <div class="slides">
 
-				<section data-background-image="data61-theme/img/DATA61_CSIRO_OnWhite_RGB_trans.png" data-background-position="1% 99%" data-background-size="10%" data-background-repeat="no-repeat">
-					<h1>Let's Make Functional Generative Art!</h1>
-					<h3><a href="https://twitter.com/xavier_ho" rel="author"><strong>@Xavier_Ho</strong></a></h3>
-				</section>
+        <section data-background-image="data61-theme/img/DATA61_CSIRO_OnWhite_RGB_trans.png" data-background-position="1% 99%" data-background-size="10%" data-background-repeat="no-repeat" data-markdown>
+          <textarea data-template>
+            # Let's Make Functional Generative Art!
+            ### [@Xavier_Ho](https://twitter.com/xavier_ho)
+          </textarea>
+        </section>
 
+        <!--
+        Outline
+         * Generative Art
+         * Shepherding Random Numbers
+         * L-Systems
+         * Pen Plotter
+        -->
 
+        <section data-background-image="img/first.jpg" background-size="cover">
+        </section>
 
-				<section>Slide 2</section>
-			</div>
-		</div>
+        <section>
+          <iframe width="1120" height="630" data-src="https://www.youtube.com/embed/TxQJPNSzl9s?start=450" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </section>
 
-		<script src="lib/js/head.min.js"></script>
-		<script src="js/reveal.js"></script>
+        <section>
+          <div class="tweet" data-src="https://twitter.com/inconvergent/status/785037357212991488"></div>
+        </section>
 
-		<script>
-			// More info about config & dependencies:
-			// - https://github.com/hakimel/reveal.js#configuration
-			// - https://github.com/hakimel/reveal.js#dependencies
-			Reveal.initialize({
-				dependencies: [
-					{ src: 'plugin/markdown/marked.js' },
-					{ src: 'plugin/markdown/markdown.js' },
-					{ src: 'plugin/notes/notes.js', async: true },
-					{ src: 'plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
-					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
-				]
-			});
-		</script>
-	</body>
+        <section>
+          <div style="display: flex; justify-content: space-around;">
+            <div class="fragment">
+              <img src="img/Elm_logo.svg" width="105" height="100">
+              <h4>Elm</h4>
+            </div>
+            <div class="fragment" style="display: flex; justify-content: space-center; align-items: center; font-size: 200%">
+              <p>➡</p>
+            </div>
+            <div class="fragment">
+              <img src="img/parallel-random.svg" width="100" height="100">
+              <h4>SVG</h4>
+            </div>
+            <div class="fragment" style="display: flex; justify-content: space-center; align-items: center; font-size: 200%">
+              <p>➡</p>
+            </div>
+            <div class="fragment">
+              <img src="img/Unofficial_JavaScript_Logo_2.svg" width="100" height="100">
+              <h4>Javascript</h4>
+            </div>
+            <div class="fragment" style="display: flex; justify-content: space-center; align-items: center; font-size: 200%">
+              <p>➡</p>
+            </div>
+            <div class="fragment">
+              <img src="img/axidraw_v3.jpg" width="100" height="100">
+              <h4>Pen Plotter</h4>
+            </div>
+          </div>
+        </section>
+
+        <section>
+          <img src="img/Elm_logo.svg" width="105" height="100">
+          <h2>Elm</h2>
+          <p><em>A delightful language for reliable webapps</em></p>
+          <ul>
+            <li class="fragment">My first functional language in production</li>
+            <li class="fragment">Flexible with website logic</li>
+            <li class="fragment">Restrictive with DOM-land</li>
+          </ul>
+        </section>
+
+        <section>
+          <h2>demystify creative coding</h2>
+        </section>
+
+        <section>
+          <h2>demystify creative coding <a>for functional programmers</a></h2>
+        </section>
+
+        <section>
+          <h3>Techniques we are going to cover</h3>
+          <ol>
+            <li class="fragment">Repeating Patterns</li>
+            <li class="fragment">Shepherding Random Numbers</li>
+            <li class="fragment">Using L-Systems</li>
+          </ol>
+        </section>
+
+        <section>
+        </section>
+
+        <section data-markdown>
+          <textarea data-template>
+            ### Resources
+
+            * [Shepherding random numbers](https://inconvergent.net/generative/) by Inconvergent
+            * [Generating fantasy maps](http://mewo2.com/notes/terrain/) by Martin O'Leary
+            * [Daily Art](http://sasj.tumblr.com/) by Saskia Freeke
+            * [Generated Space](http://generated.space/) by Kjetil Golid
+          </textarea>
+        </section>
+
+      </div>
+    </div>
+
+    <script src="lib/js/head.min.js"></script>
+    <script src="js/reveal.js"></script>
+
+    <script>
+      // More info about config & dependencies:
+      // - https://github.com/hakimel/reveal.js#configuration
+      // - https://github.com/hakimel/reveal.js#dependencies
+      Reveal.initialize({
+        dependencies: [
+          { src: 'plugin/markdown/marked.js' },
+          { src: 'plugin/markdown/markdown.js' },
+          { src: 'plugin/notes/notes.js', async: true },
+          { src: 'plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
+          { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+          { src: 'plugin/embed-tweet/embed-tweet.js' },
+        ]
+      });
+    </script>
+  </body>
 </html>
