--- a/index.html
+++ b/index.html
@@ -109,29 +109,8 @@
         </section>
 
         <section>
-          <h4>Drawing a line</h4>
-          <pre><code class="elm" data-trim data-noescape>
-import Svg
-import Svg.Attributes as Attributes
-
-line : Float -> Float -> Float -> Float -> Svg msg
-line x1 y1 x2 y2 =
-    Svg.line
-        [ Attributes.x1 <| toString x1
-        , Attributes.y1 <| toString y1
-        , Attributes.x2 <| toString x2
-        , Attributes.y2 <| toString y2
-        ]
-        []
-
-translate : Float -> Float -> String
-translate x y =
-    " translate(" ++ toString x ++ "," ++ toString y ++ ") "
-
-rotate : Float -> String
-rotate degree =
-    " rotate(" ++ toString degree ++ ") "
-          </code></pre>
+          <h3>How to draw a <a>grid</a> of <a>line</a>s, with <a>random rotations</a></h3>
+          <p class="fragment">Please 🐻 with me. This will be code heavy.</p>
         </section>
 
         <section>
@@ -158,69 +137,82 @@ makeGrid m n =
         </section>
 
         <section>
-          <h4>Generating random rotations</h4>
-          <img class="fragment" data-src="img/plunger.jpg" width="500">
-        </section>
-
-        <section>
-          <h4>Generating random rotations</h4>
-          <img class="spin" data-src="img/plunger.jpg" width="500">
-        </section>
-
-        <section>
-          <h4>Elm Random Generators</h4>
+          <h4>Drawing a line</h4>
           <pre><code class="elm" data-trim data-noescape>
-generate : (a -> msg) -> Generator a -> Cmd msg
+import Svg
+import Svg.Attributes as Attributes
+
+line : Float -> Float -> Float -> Float -> Svg msg
+line x1 y1 x2 y2 =
+    Svg.line
+        [ Attributes.x1 <| toString x1
+        , Attributes.y1 <| toString y1
+        , Attributes.x2 <| toString x2
+        , Attributes.y2 <| toString y2
+        ]
+        []
           </code></pre>
-          <ul>
-            <li class="fragment"><code>(a -> msg)</code> — Msg constructor</li>
-            <li class="fragment"><code>Generator a</code> — random generator</li>
-            <li class="fragment"><code>Cmd msg</code> — Next Msg</li>
-          </ul>
-          <p><small>Built-in package <a href="http://package.elm-lang.org/packages/elm-lang/core/5.1.1/Random#generate">Random</a></small></p>
         </section>
 
         <section>
-          <h4>Define our own generator</h4>
+          <h4>Preparing data for diagonal lines</h4>
+          <pre><code class="elm" data-trim data-noescape>
+          lines : Int -> Int -> List ( (Float, Float), (Float, Float) )
+          lines m n =
+              List.repeat (m * n) ( ( -0.5, -0.5 ), ( 0.5, 0.5 ) )
+          </code></pre>
+        </section>
+
+        <section>
+          <h4>Generating random rotations</h4>
+          <img class="fragment" data-src="img/plunger.jpg" height="300">
+        </section>
+
+        <section>
+          <h4>Generating random rotations</h4>
+          <img class="spin" data-src="img/plunger.jpg" height="300">
+        </section>
+
+        <section>
+          <h4>Define our own generator & model</h4>
           <pre><code class="elm" data-trim data-noescape>
 import Random exposing (Generator)
 
 random : Generator Float
 random =
-    Random.float -0.5 0.5
+    Random.float -0.5 0.5               -- | Generate a value between -0.5 and 0.5
 
 randomList : Int -> Generator (List Float)
 randomList n =
     Random.list n random
           </code></pre>
-        </section>
-
-        <section>
-          <h4>Generating random numbers</h4>
           <pre><code class="elm fragment" data-trim data-noescape>
 type Model
-    = Setup Int Int Float               -- | Grid (m x n), and scale
-    | Model Int Int Float (List Float)  -- | Mix in random values
-          </code></pre>
-          <pre><code class="elm fragment" data-trim data-noescape>
+    = Setup Int Int               -- | Grid (m x n) in size
+    | Model Int Int (List Float)  -- | Mix in random values
+
 type Msg
     = Generate
     | Draw (List Float)
           </code></pre>
-          <pre><code class="elm fragment" data-trim data-noescape>
-init : ( Model, Cmd Msg )
+        </section>
+
+        <section>
+          <h4>Filling in Elm program functions</h4>
+          <pre><code class="elm" data-trim data-noescape>
+init : ( Model, Cmd Msg )                   -- | Called once on page load
 init =
-    update Generate (Setup 16 16 10)
+    update Generate (Setup 16 16)
           </code></pre>
           <pre><code class="elm fragment" data-trim data-noescape>
-update : Msg -> Model -> ( Model, Cmd Msg )
+update : Msg -> Model -> ( Model, Cmd Msg ) -- | Calls `view` each time
 update msg model =
     case ( msg, model ) of
-        ( Generate, Setup m n _) ) ->
+        ( Generate, Setup m n ) ) ->
             ( model, Random.generate Draw <| randomList (m * n) )
 
-        ( Draw data, Setup m n size ) ->
-            ( Model m n size data, Cmd.none )
+        ( Draw rs, Setup m n ) ->
+            ( Model m n rs, Cmd.none )
 
         _ ->
             ( model, Cmd.none )
@@ -228,26 +220,27 @@ update msg model =
         </section>
 
         <section>
-          <h3>To draw a <a>grid</a> of <a>line</a>s, with <a>random rotations</a></h3>
+          <h4>Drawing our <a>grid</a> of <a>line</a>s, with <a>random rotations</a></h4>
           <pre><code class="elm" data-trim data-noescape>
-let
-    flip r =
-        if r > 0 then
-            0
-        else
-            90
-in
-List.map3
-    (\( dx, dy ) (( x1, y1 ), ( x2, y2 )) r ->
-        g
-            [ transform <|
-                  Draw.translate dx dy ++ Draw.rotate (flip r)
-            ]
-            [ line x1 y1 x2 y2 ]
-    )
-    (makeGrid m n)
-    start
-    rs
+import Html exposing (Html)
+
+view : Model -> Html Msg
+view (Model m n rs) =
+    let
+        flip r = if r > 0 then 0 else 90
+    in
+    List.map3
+        (\( dx, dy ) (( x1, y1 ), ( x2, y2 )) r ->
+            Svg.g
+                [ Svg.transform <|
+                      (" translate(" ++ toString dx ++ "," ++ toString dy ++ ") ")
+                      ++ " rotate(" ++ toString (flip r) ++ ") "
+                ]
+                [ line x1 y1 x2 y2 ]
+        )
+        (makeGrid m n)
+        (lines m n)
+        rs
           </code></pre>
         </section>
 
