Updated fragment in stack page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <section>
           <div style="display: flex; justify-content: space-around;">
-            <div class="fragment">
+            <div class="">
               <img data-src="img/Elm_logo.svg" width="105" height="100">
               <h4>Elm</h4>
             </div>
