started on L-Systems

--- a/index.html
+++ b/index.html
@@ -320,6 +320,12 @@ view (Model n (Curtain a b)) =
           </code></pre>
         </section>
 
+        <section>
+          <h3  style="color: silver;">I.   Random grid</h3>
+          <h3 style="color: silver;">II.  Shepherding random numbers</h3>
+          <h3>III. Using L-Systems</h3>
+        </section>
+
         <section data-markdown>
           <textarea data-template>
             ### Resources
