Slide draft complete

--- a/index.html
+++ b/index.html
@@ -462,6 +462,22 @@ turtle states point angle =
           </textarea>
         </section>
 
+
+        <section data-markdown>
+          <textarea data-template>
+            Slide deck at [tinyurl.com/LJ2018-FGA](https://tinyurl.com/LJ2018-FGA)<br>
+            Play with the examples online at [creative.github.io/elm-generative](https://creative.github.io/elm-generative/)
+            <br><br>
+
+            ### Xavier Ho
+
+            * 💌 [xavier.ho@data61.csiro.au](mailto:xavier.ho@data61.csiro.au)
+            * 🐙 [github.com/Spaxe](https://github.com/Spaxe)
+            * 🐦 [@Xavier_Ho](https://twitter.com/Xavier_Ho)
+
+          </textarea>
+        </section>
+
       </div>
     </div>
 
