Crunching image sizes

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ turtle states point angle =
           </code></pre>
         </section>
 
-        <section data-background-iframe="http://package.elm-lang.org/packages/Spaxe/elm-lsystem/latest/LSystem">
+        <section data-background-image="img/spaxe-lsystem.png" data-background-size="cover">
         </section>
 
         <section data-background-image="img/examples/hilbert/00.svg" data-background-size="cover">
